objects/Member__c.object
<CustomObject>
    <description>Includes Member details</description>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Please enter your email address</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>Please Enter your First Name</inlineHelpText>
        <label>First Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>Please enter your last name</inlineHelpText>
        <label>Last Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>